--- a/Havit.Blazor.Components.Web.Bootstrap/Forms/Internal/HxInputDateRangeInternal.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Forms/Internal/HxInputDateRangeInternal.razor.css
@@ -25,8 +25,6 @@
     flex: 1 0 50%;
 }
 
-::deep .dropdown:focus-within,
-::deep .dropdown:has(.is-invalid),
-::deep .dropdown:has(.is-valid) {
+::deep .dropdown:focus-within {
     z-index: 6; /* Assures that the inputs' box shadows are always fully visible (rendered on top). Must be larger than 5 because otherwise the validation message is rendered on top. */
 }
